// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadTermsAndConditions should render checked if terms and conditions accepted 1`] = `
<WithStyles(FormControlLabel)
  control={
    <WithStyles(Checkbox)
      checked={true}
      className=""
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      className="textAlign color"
    />
  }
/>
`;

exports[`Component FileUploadTermsAndConditions should render default view 1`] = `
<WithStyles(FormControlLabel)
  control={
    <WithStyles(Checkbox)
      checked={false}
      className="color"
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      className="textAlign color"
    />
  }
/>
`;
